--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@tabler/icons-react": "^3.17.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.6.0",
+    "framer-motion": "^11.8.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
